--- a/css/style.css
+++ b/css/style.css
@@ -411,6 +411,15 @@ textarea:focus {
   cursor: pointer;
 }
 
+.glazing_block.active a{
+  text-decoration: none;
+  color: #454545;
+}
+
+.glazing_block.active a:hover{
+  cursor: default;
+}
+
 .glazing_cold {
   margin-top: 4rem;
   padding: 2.5rem 0;
@@ -500,17 +509,17 @@ textarea:focus {
   padding: 2rem 2rem;
 }
 
-.glazing .aluminum,
+/* .glazing .aluminum,
 .glazing .plastic,
 .glazing .french,
 .glazing .rise {
   display: none;
-}
+} */
 
-.glazing a.active {
+/* .glazing a.active {
   text-decoration: none;
   color: #454545;
-}
+} */
 
 /*test*/
 /*.tabs li {
