--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,14 @@
 .overflow-auto{
   overflow: auto;
 }
+.status-message{
+  font-size: 20px;
+  font-weight: 900;
+  color: #337ab7;
+  border: 1px solid #337ab7;
+  padding: 5px;
+  border-radius: 5px;
+}
 
 /*Fonts Family*/
 /*Colors*/
